extras/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: PERMISSIVE #STRICT
# apiVersion: security.istio.io/v1
# kind: PeerAuthentication
# metadata:
#   name: bookinfo
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       app: bookinfo
#   mtls:
#     mode: STRICT
# ---
# apiVersion: security.istio.io/v1
# kind: PeerAuthentication
# metadata:
#   name: gateway
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       app: gateway
#   mtls:
#     mode: STRICT
# ---
